--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,7 @@
 
                     <input type="submit" value="Утвердить!">
                 </form>
+                <a href="/users/clear">Выход</a>
             <% end %>
         <% end %>
     </div>
